--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,34 @@ body, tr, td, th, input {
     font-family: 'Roboto', sans-serif;
 }
 
+#container {
+    max-width: 1024px;
+    border: 1px solid lightgrey;
+    padding: 20px;
+    margin: auto;
+}
+
 .error {
     color: red;
+    padding: 5px;
+    background-color: lightgrey;
 }
 
 .success {
     color: green;
+    padding: 5px;
+    background-color: lightgrey;
+}
+
+input {
+
+}
+
+label, input {
+    margin:5px 0;
+}
+
+hr {
+    border-top: 1px solid lightgrey;
+    border-bottom: none;
 }
