--- a/styles.css
+++ b/styles.css
@@ -24,10 +24,6 @@ body, tr, td, th, input {
     background-color: lightgrey;
 }
 
-input {
-
-}
-
 label, input {
     margin:5px 0;
 }
@@ -35,4 +31,30 @@ label, input {
 hr {
     border-top: 1px solid lightgrey;
     border-bottom: none;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    margin: 5px 0;
+}
+th, td {
+    border: 1px solid lightgrey;
+    padding: 5px;
+    text-align: left;
+}
+
+.center {
+    text-align: center;
+    padding: 5px 0;
+}
+
+.left {
+    text-align: left;
+    padding: 5px 0;
+}
+
+.right {
+    text-align: right;
+    padding: 5px 0;
 }
