--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-body, tr, td, th, input {
+body, tr, td, th, input, select {
     font-family: 'Roboto', sans-serif;
 }
 
@@ -15,28 +15,28 @@ body, tr, td, th, input {
 .error {
     color: red;
     padding: 5px;
-    background-color: lightgrey;
+    margin: 10px 0;
+    border: 1px solid red;
 }
 
 .success {
     color: green;
     padding: 5px;
     background-color: lightgrey;
-}
-
-label, input {
-    margin:5px 0;
+    margin: 10px 0;
+    border: 1px solid green;
 }
 
 hr {
     border-top: 1px solid lightgrey;
     border-bottom: none;
+    margin: 10px 0;
 }
 
 table {
     border-collapse: collapse;
     width: 100%;
-    margin: 5px 0;
+    margin: 10px 0;
 }
 th, td {
     border: 1px solid lightgrey;
@@ -57,4 +57,15 @@ th, td {
 .right {
     text-align: right;
     padding: 5px 0;
+}
+
+label {
+    display: block;
+    margin: 10px 0;
+}
+input, select {
+    margin-top: 5px;
+    width: 100%;
+    padding: 2px 3px;
+    box-sizing: border-box;
 }
