--- a/styles.css
+++ b/styles.css
@@ -64,11 +64,16 @@ label {
     display: block;
     margin: 10px 0;
 }
-input, select, textarea {
+input, select, textarea,
+input[type=file]::file-selector-button {
     margin-top: 5px;
     width: 100%;
     padding: 2px 3px;
     box-sizing: border-box;
+}
+input[type=file] {
+    padding:0; 
+    margin:0;
 }
 
 textarea {
