--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,10 @@ input[type=file] {
     padding:0; 
     margin:0;
 }
+input[type=checkbox] {
+    display: inline;
+    width: auto;
+}
 
 textarea {
     height: 120px;
