--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,11 @@ th, td {
     text-align: left;
 }
 
+.icon {
+    width: 60px;
+    text-align: center;
+}
+
 .center {
     text-align: center;
     padding: 5px 0;
