--- a/styles.css
+++ b/styles.css
@@ -1,104 +1,117 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
-body, tr, td, th, input, select, textarea {
-    font-family: 'Roboto', sans-serif;
+body,
+tr,
+td,
+th,
+input,
+select,
+textarea {
+  font-family: "Roboto", sans-serif;
 }
 
 table table {
-    font-size: 80%;
+  font-size: 90%;
 }
 
 #container {
-    max-width: 1024px;
-    border: 1px solid lightgrey;
-    padding: 20px;
-    margin: auto;
+  max-width: 1024px;
+  border: 1px solid lightgrey;
+  padding: 20px;
+  margin: auto;
 }
 
 .error {
-    color: red;
-    padding: 5px;
-    margin: 10px 0;
-    border-top: 1px solid #eb062c;
-    border-bottom: 1px solid #eb062c;
+  color: red;
+  padding: 5px;
+  margin: 10px 0;
+  border-top: 1px solid #eb062c;
+  border-bottom: 1px solid #eb062c;
 }
 
 .success {
-    color: green;
-    padding: 5px;
-    margin: 10px 0;
-    border-top: 1px solid green;
-    border-bottom: 1px solid green;
+  color: green;
+  padding: 5px;
+  margin: 10px 0;
+  border-top: 1px solid green;
+  border-bottom: 1px solid green;
 }
 
 hr {
-    border-top: 1px solid lightgrey;
-    border-bottom: none;
-    margin: 10px 0;
+  border-top: 1px solid lightgrey;
+  border-bottom: none;
+  margin: 10px 0;
 }
 
 table {
-    border-collapse: collapse;
-    width: 100%;
-    margin: 10px 0;
+  border-collapse: collapse;
+  width: 100%;
+  margin: 10px 0;
 }
-th, td {
-    border: 1px solid lightgrey;
-    padding: 5px;
-    text-align: left;
+th,
+td {
+  border: 1px solid lightgrey;
+  padding: 5px;
+  text-align: left;
+}
+
+.card {
+  padding: 10px;
+  border: 1px solid lightgrey;
+  margin-top: 10px;
 }
 
 .icon {
-    width: 60px;
-    text-align: center;
+  width: 60px;
+  text-align: center;
 }
 
 .center {
-    text-align: center;
-    padding: 5px 0;
+  text-align: center;
+  padding: 5px 0;
 }
 
 .left {
-    text-align: left;
-    padding: 5px 0;
+  text-align: left;
+  padding: 5px 0;
 }
 
 .right {
-    text-align: right;
-    padding: 5px 0;
+  text-align: right;
+  padding: 5px 0;
 }
 
 label {
-    display: block;
-    margin: 10px 0;
+  display: block;
+  margin: 10px 0;
 }
-input, select, textarea,
-input[type=file]::file-selector-button {
-    margin-top: 5px;
-    width: 100%;
-    padding: 2px 3px;
-    box-sizing: border-box;
+input,
+select,
+textarea,
+input[type="file"]::file-selector-button {
+  margin-top: 5px;
+  width: 100%;
+  padding: 2px 3px;
+  box-sizing: border-box;
 }
-input[type=file] {
-    padding:0; 
-    margin:0;
+input[type="file"] {
+  padding: 0;
+  margin: 0;
 }
-input[type=checkbox] {
-    display: inline;
-    width: auto;
+input[type="checkbox"] {
+  display: inline;
+  width: auto;
 }
 
 textarea {
-    height: 120px;
+  height: 120px;
 }
-
 
 a:link,
 a:visited,
 a:active,
 a:hover {
-    text-decoration: none;
-    color: #ff8e00;
-    white-space: nowrap;
+  text-decoration: none;
+  color: #ff8e00;
+  white-space: nowrap;
 }
