--- a/styles.css
+++ b/styles.css
@@ -153,3 +153,12 @@ a:hover {
     margin-bottom: 10px;
     font-weight: 700;
 }
+/* for question.php */
+.question-div
+{
+  height: auto;
+  width: auto;
+  border: 1px solid black;
+  padding: 5px;
+  margin-top: 5px;
+}
