--- a/styles.css
+++ b/styles.css
@@ -172,3 +172,14 @@ form textarea
     word-break: break-all;
     font-size: 1.1em;
 }
+
+/* vote */
+.up_vote button
+{
+    height: 30px;
+    width: 60px;
+    background-color: transparent;
+    border: 1px solid #ff8e00;
+    color: black;
+    cursor: pointer;
+}
