--- a/styles.css
+++ b/styles.css
@@ -183,3 +183,21 @@ form textarea
     color: black;
     cursor: pointer;
 }
+/* for pagination div */
+#pagelinks ul
+{
+    text-align: center;
+    list-style: none;  
+    padding: 0;
+    margin: 0;
+}
+#pageLinks li
+{
+    display: inline-block;
+    margin: 0 1px;
+}
+.current a
+{
+    color: #eb062c !important;
+    text-decoration: underline;
+}
